--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "hammerjs": "^2.0.8",
+        "keycode-js": "^2.0.3",
         "socket.io-client": "^2.3.0"
     }
 }
