--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "email": "ufon.exe@yandex.ru"
   },
   "devDependencies": {
-    "concurrently": "^5.0.0",
-    "lerna": "^3.20.0"
+    "concurrently": "^5.1.0",
+    "lerna": "^3.20.2"
   },
   "scripts": {
+    "clean": "rm -rf node_modules && lerna clean",
     "bootstrap": "lerna bootstrap",
     "start:desktop": "lerna exec --scope @remoteloop/desktop -- npm start",
     "build:desktop": "lerna exec --scope @remoteloop/desktop -- npm run build",
