--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       matrix:
         os: [macOS-10.14, windows-2019, ubuntu-18.04]
     steps:
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - name: Setup Node
         uses: actions/setup-node@v1
       - name: Installing dependencies
