--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - name: Installing dependencies
-        run: npm ci && npm run bootstrap
+        run: npm ci && npm run bootstrap -- --no-ci
       - name: Build + Publish
         run: npm run build -- -- --publish always
