--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
     needs: [version-bump] 
     strategy:
       matrix:
-        os: [macOS-10.14, windows-2019, ubuntu-18.04]
+        os: [macOS-10.14, windows-2019]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
