packages updating + releasing process

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,9 @@
 name: remoteloop-release
 
-on:
-  push:
-    tags:
-      - "*"
+on: push
 
 jobs:
-  release:
+  build:
     runs-on: ${{ matrix.os }}
     needs: [version-bump]
     strategy:
@@ -17,7 +14,13 @@ jobs:
       - uses: actions/setup-node@v1
       - name: Installing dependencies
         run: npm ci && npm run bootstrap -- --no-ci
-      - name: Build + Publish
-        run: npm run build -- -- --publish=always
-        env:
-          GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - name: Build + Release
+        uses: samuelmeuli/action-electron-builder@v1
+        with:
+          # GitHub token, automatically provided to the action
+          # (No need to define this secret in the repo settings)
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+          # If the commit is tagged with a version (e.g. "v1.0.0"),
+          # release the app after building
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
