--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "remoteloop",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "license": "MIT",
-  "description": "The simplest solution for remote control of your PC.",
-  "copyright": "Copyright © 2020 Anton Postoyalko",
+  "description": "The simplest solution to control remotely your computer",
+  "copyright": "Copyright © 2021 Anton Postoyalko",
   "homepage": "https://github.com/ufon/remoteloop#readme",
   "author": {
     "name": "Anton Postoyalko",
@@ -13,14 +13,18 @@
     "type": "git",
     "url": "https://github.com/ufon/remoteloop.git"
   },
+  "engines": {
+    "node": ">=12.18.3"
+  },
   "devDependencies": {
-    "concurrently": "^5.1.0",
-    "lerna": "^3.20.2",
-    "run-script-os": "^1.1.1"
+    "concurrently": "^5.3.0",
+    "lerna": "^3.22.1",
+    "run-script-os": "^1.1.4"
   },
   "scripts": {
     "clean": "rm -rf node_modules && lerna clean",
     "bootstrap": "lerna bootstrap",
+    "start:desktop": "lerna exec --scope @remoteloop/desktop -- npm start",
     "build:desktop": "run-script-os",
     "build:desktop:darwin": "lerna exec --scope @remoteloop/desktop -- npm run build -- --mac",
     "build:desktop:win32": "lerna exec --scope @remoteloop/desktop -- npm run build -- --win",
