--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,8 +4,8 @@ on: push
 
 jobs:
   build:
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ${{ matrix.os }}
-    needs: [version-bump]
     strategy:
       matrix:
         os: [macOS-10.14, windows-2019]
