--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,18 @@
 name: remoteloop-release
 
-on: push
+on: [push, pull_request]
 
 jobs:
+  bump:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+      - name: Version bump
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          npx lerna version patch -m "chore(release): publish %s" --yes
   build:
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ${{ matrix.os }}
@@ -13,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - name: Installing dependencies
-        run: npm ci && npm run bootstrap -- --no-ci
+        run: npx lerna bootstrap --no-ci
       - name: Build + Release
         uses: samuelmeuli/action-electron-builder@v1
         with:
