fix release workflow

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "start:web": "lerna exec --scope @remoteloop/web -- npm start",
     "build:web": "lerna exec --scope @remoteloop/web -- npm run build",
     "start": "concurrently \"npm run start:desktop\" \"npm run start:web\"",
-    "build": "npm run build:web && npm run build:desktop"
+    "build": "npm run build:web && npm run build:desktop",
+    "release": "npm run build"
   }
 }
