--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,18 +1,13 @@
 name: remoteloop-release
 
-on: [push, pull_request]
+on:
+  workflow_run:
+    workflows: ["remoteloop-bump"]
+    branches: [feature/circleci-integration]
+    types:
+      - completed
 
 jobs:
-  bump:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-      - name: Version bump
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          npx lerna version patch -m "chore(release): publish %s" --yes
   build:
     runs-on: ${{ matrix.os }}
     needs: bump
@@ -23,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '12.18.3'
+          node-version: "12.18.3"
       - name: Installing dependencies
         run: npx lerna bootstrap --no-ci
       - name: Build + Release
