--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,6 @@ jobs:
       - name: Installing dependencies
         run: npm ci && npm run bootstrap -- --no-ci
       - name: Build + Release
-        run: npm run build -- -- --publish=always
+        run: npm run release
         env:
           GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
