--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -12,4 +12,4 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          npx lerna version patch -m "chore(release): publish %s" --yes
+          npx lerna version --conventional-commits -m "chore(release): publish %s" --yes
