--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -73,10 +73,11 @@
         }
     },
     "scripts": {
+        "clear": "rm -rf dist",
         "postinstall": "npm run rebuild",
         "start": "nodemon --watch ./src --exec 'electron ./src --inspect'",
         "rebuild": "electron-rebuild -f -w robotjs",
-        "build": "electron-builder",
+        "build": "npm run clear && electron-builder",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "devDependencies": {
