--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -76,28 +76,28 @@
     "clear": "rm -rf dist",
     "postinstall": "npm run rebuild",
     "start": "nodemon --watch ./src --exec \"electron ./src --inspect\"",
-    "rebuild": "electron-rebuild -f -w robotjs",
+    "rebuild": "electron-rebuild",
     "build": "npm run clear && electron-builder",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/node": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
+    "@babel/core": "^7.16.5",
+    "@babel/node": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
     "devtron": "^1.4.0",
-    "electron": "^11.1.1",
-    "electron-builder": "^22.9.1",
-    "electron-rebuild": "^2.3.4",
-    "nodemon": "^2.0.6"
+    "electron": "13",
+    "electron-builder": "^22.14.5",
+    "electron-rebuild": "^3.2.5",
+    "nodemon": "^2.0.15"
   },
   "dependencies": {
     "@remoteloop/web": "^0.3.0",
-    "electron-log": "^4.3.1",
+    "@nut-tree/nut-js": "^1.7.0",
+    "electron-log": "^4.4.1",
     "express": "^4.17.1",
     "ip": "^1.1.5",
-    "keycode": "^2.2.0",
-    "qrcode": "^1.4.4",
-    "robotjs": "^0.6.0",
-    "socket.io": "^3.0.4"
+    "keycode": "^2.2.1",
+    "qrcode": "^1.5.0",
+    "socket.io": "^4.4.0"
   }
 }
