--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    if: "contains(github.event.head_commit.message, '[release]')"
     strategy:
       matrix:
         os: [macos-latest, windows-latest]
